<resources>
    <string name="app_name" translatable="false">Forum</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Password</string>
    <string name="register_button">Register</string>
    <string name="register_logo">FRA4RUM</string>
    <string name="login_password">Password</string>
    <string name="login_email">E-mail</string>
    <string name="login_logo">FRA4RUM</string>
    <string name="login_button">Login</string>
    <string name="login_logof">logo</string>
    <string name="register_logof">logo</string>
    <string name="start_login_button">Login</string>
    <string name="start_registerBtn">Sign up</string>
    <string name="start_logo">logo</string>
    <string name="textLogo">FRA4RUM</string>
    <string name="noti1">Havent have an account yet?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
