<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".StartActivity">


    <Button
        android:id="@+id/start_login_button"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:text="@string/start_login_button"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_registerBtn"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="35dp"
        android:text="@string/start_registerBtn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/start_logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/start_logo"
        app:srcCompat="@drawable/logo02" />

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/textLogo"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/start_login_emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@color/material_on_background_disabled"
        android:drawableLeft="@drawable/ic_action_email"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/start_login_editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_login_emailEditText"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="60dp"
        android:background="@color/material_on_background_disabled"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/noti1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="-9dp"
        android:layout_marginBottom="50dp"
        android:layout_toStartOf="@+id/start_registerBtn"
        android:text="@string/noti1"
        android:textColor="#FFFFFF" />

</RelativeLayout>