<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1FD49B00"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_below="@+id/login_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_editTextPassword"
        android:layout_width="277dp"
        android:layout_height="24dp"
        android:layout_below="@+id/login_emailEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="118dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#4E5A9E"
        android:text="@string/login_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_logo"
        android:layout_width="144dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login_logo"
        android:textAlignment="center"
        android:textColor="#4E5A9E"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="110dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_email"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_password"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        android:textStyle="bold" />

</RelativeLayout>